--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "calendar_project1",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5"
+    "@rails/webpacker": "3.5",
+    "flatpickr": "^4.5.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
